--- a/style.css
+++ b/style.css
@@ -1,134 +1,193 @@
-html, body {
-    background-color: #fff;
-    font-family: Tw Cen MT;
-    width: auto;
-    height: auto;
-  }
+*
+  // border: solid 1px black
+
+@mixin ani($s:1s,$d:0)
+  transition-duration: $s
+  transition-delay: $d
   
-  .card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -225px;
-    margin-left: -300px;
-    overflow: hidden;
-    background-color: #293C61;
-    box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
-    width: 600px;
-    height: 450px;
-  }
+@mixin items($t:0px,$l:0px,$h:0px,$w:0px)
+  position: absolute
+  top: $t
+  left: $l
+  height: $h
+  width: $w
   
-  .open {
-    height: 370px;
-    position: relative;
-  }
-  .open .rabbit02 {
-    position: absolute;
-    top: 8px;
-    left: 481px;
-    height: 150px;
-    width: 100px;
-    background: url(https://upload.cc/i1/2021/09/06/njFb4e.png);
-  }
-  .open .cloud03 {
-    position: absolute;
-    top: 84px;
-    left: 325px;
-    height: 64px;
-    width: 265px;
-    background: url(https://upload.cc/i1/2021/09/06/q5xUKo.png);
-  }
-  .open .shine01 {
-    position: absolute;
-    top: 20px;
-    left: 90px;
-    height: 210px;
-    width: 135px;
-    background: url(https://upload.cc/i1/2021/09/06/ZNtv3m.gif);
-  }
-  .open .shine02 {
-    position: absolute;
-    top: 100px;
-    left: 216px;
-    height: 300px;
-    width: 300px;
-    background: url(https://upload.cc/i1/2021/09/06/ZNtv3m.gif);
-  }
-  .open .cloud02 {
-    position: absolute;
-    top: 100px;
-    left: -338px;
-    height: 188px;
-    width: 539px;
-    background: url(https://upload.cc/i1/2021/09/06/srGAiB.png);
-  }
-  .open .cloud01 {
-    position: absolute;
-    top: 192px;
-    left: 384px;
-    height: 178px;
-    width: 458px;
-    background: url(https://upload.cc/i1/2021/09/06/61Bzdy.png);
-  }
-  .open .rabbit01 {
-    position: absolute;
-    top: 158px;
-    left: 80px;
-    height: 150px;
-    width: 120px;
-    background: url(https://upload.cc/i1/2021/09/06/dzrC8j.png);
-    transition-duration: 1s;
-    transition-delay: 0.1s;
-  }
-  .open .moon {
-    margin-right: auto;
-    margin-left: auto;
-    top: 80px;
-    width: 290px;
-    height: 290px;
-    border-radius: 50%;
-    background: radial-gradient(#FFEA2E, #FFA800);
-    position: relative;
-  }
-  .open .moon .midmoon {
-    opacity: 1;
-    position: absolute;
-    left: 40px;
-    top: 90px;
-    width: 220px;
-    color: #fff;
-    font-weight: 800;
-  }
-  .open .moon .midmoon .happy {
-    font-size: 50px;
-    color: #293C61;
-    font-weight: 600;
-  }
-  .open .moon .midmoon .mid {
-    font-size: 36px;
-    color: #293C61;
-  }
-  .open .moon .midmoon .year {
-    font-size: 20px;
-  }
-  .open .moon .midmoon .year .line {
-    display: inline-block;
-    width: 160px;
-    height: 1px;
-    background-color: #fff;
-    margin: 4px 0px;
-  }
-  .open .moon .midmoon .year .thisyear {
-    display: inline-block;
-  }
+
+
+html,body 
+  background-color: #fff
+  font-family: Tw Cen MT
+  width: auto
+  height: auto
   
-  .footer {
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .footer .logo {
-    width: 57px;
-    height: 24px;
-  }
+.card
+  position: absolute
+  top: 50%
+  left: 50%
+  margin-top: -225px
+  margin-left: -300px
+  overflow: hidden
+  background-color: #293C61
+  box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px
+  width: 600px
+  height: 450px
+  cursor: pointer
+  
+
+  
+/// before ///
+.default
+  height: 370px
+  position: relative
+  
+  .rabbit02
+    +items(8px,469px,150px,100px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/rabbit02.png)
+    
+    +ani
+  .cloud03
+    +items(84px,320px,64px,265px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/cloud02.png)
+    +ani(1s,0.2s)
+  .cloud02
+    +items(100px,0px,188px,539px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/cloud03.png)
+    +ani 
+  .cloud01
+    +items(192px,142px,178px,458px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/cloud01.png)
+    +ani
+  .rabbit01
+    +items(158px,60px,150px,120px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/rabbit01.png)
+    +ani(1s,-0.1s)
+  .shine01
+    +items(20px,90px,210px,135px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/animation_300_kt8e3pbi.gif)
+    +ani
+  .shine02
+    +items(100px,216px,300px,300px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/animation_300_kt8e3pbi.gif)
+    +ani
+
+    
+  
+  .moon
+    margin-right: auto
+    margin-left: auto
+    top: 80px
+    width: 290px
+    height: 290px
+    border-radius: 50%
+    background: radial-gradient(#FFEA2E, #FFA800)
+    position: relative
+    
+    .midmoon
+      opacity:0
+      position: absolute
+      left: 40px
+      top: 90px
+      width: 220px
+      color: #fff
+      font-weight: 800
+      +ani
+  
+      .happy
+        font-size: 50px
+        color: #293C61
+        font-weight: 600
+      .mid
+        font-size: 36px  
+        color: #293C61
+      .year
+        font-size: 20px
+        .line
+          display: inline-block
+          width: 160px
+          height: 1px
+          background-color: #fff
+          margin: 4px 0px
+        .thisyear
+          display: inline-block
+
+/// after ///
+.open
+  height: 370px
+  position: relative
+  
+  .rabbit02
+    +items(8px,481px,150px,100px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/rabbit02.png)
+  .cloud03
+    +items(84px,325px,64px,265px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/cloud02.png)
+    
+  .shine01
+    +items(20px,90px,210px,135px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/animation_300_kt8e3pbi.gif)
+  .shine02
+    +items(100px,216px,300px,300px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/animation_300_kt8e3pbi.gif)
+    
+  .cloud02
+    +items(100px,-338px,188px,539px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/cloud03.png)
+
+  .cloud01
+    +items(192px,384px,178px,458px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/cloud01.png)
+  .rabbit01
+    +items(158px,80px,150px,120px)
+    background: url(https://coraltsai.com/wp-content/uploads/2023/02/rabbit01.png)
+    +ani(1s,0.1s)
+    
+
+    
+  
+  .moon
+    margin-right: auto
+    margin-left: auto
+    top: 80px
+    width: 290px
+    height: 290px
+    border-radius: 50%
+    background: radial-gradient(#FFEA2E, #FFA800)
+    position: relative
+    
+    .midmoon
+      opacity: 1
+      position: absolute
+      left: 40px
+      top: 90px
+      width: 220px
+      color: #fff
+      font-weight: 800
+  
+      .happy
+        font-size: 50px
+        color: #293C61
+        font-weight: 600
+      .mid
+        font-size: 36px  
+        color: #293C61
+      .year
+        font-size: 20px
+        .line
+          display: inline-block
+          width: 160px
+          height: 1px
+          background-color: #fff
+          margin: 4px 0px
+        .thisyear
+          display: inline-block
+          
+.footer
+  height: 80px
+  display: flex
+  justify-content: center
+  align-items: center
+
+  .logo
+    width: 57px
+    height: 24px
+    // background: url(https://upload.cc/i1/2021/09/06/3faRz9.png)
